<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">易控</string>
  <string name="app_name_dev">易控测试版</string>
  <!-- 主页 -->
  <string name="main_poem">新年快乐！！！</string>
  <string name="main_float_permission">请授予悬浮窗权限，否则软件无法使用</string>
  <string name="main_float_permission_button">前往设置</string>
  <string name="main_scan_device_list">找到以下地址(点击复制)</string>

  <!-- 设置页面 -->
  <string name="set_default">默认参数</string>
  <string name="set_on_start">设置启动时操作</string>
  <string name="set_on_connect">设置连接时操作</string>
  <string name="set_on_close">设置断开时操作</string>
  <string name="set_connecting">设置运行时操作</string>
  <string name="set_other">其他</string>
  <string name="set_adb_key">Adb密钥</string>
  <string name="set_about">关于</string>
  <string name="set_auto_wake_on_connect">连接时自动唤醒</string>
  <string name="set_auto_wake_on_connect_detail">连接成功后自动唤醒被控端</string>
  <string name="set_auto_lightoff_on_connect">连接时关闭背光</string>
  <string name="set_auto_lightoff_on_connect_detail">连接成功后自动关闭被控端屏幕</string>
  <string name="set_auto_lock_on_close">断开时自动锁定</string>
  <string name="set_auto_lock_on_close_detail">断开时自动锁定被控端</string>
  <string name="set_auto_light_on_close">断开时自动恢复背光</string>
  <string name="set_auto_light_on_close_detail">断开时自动恢复被控端背光（若启用了自动锁定，则此功能可开可关）</string>
  <string name="set_auto_keep_screen_awake">被控端保持唤醒</string>
  <string name="set_auto_keep_screen_awake_detail">连接过程中被控端不锁定（即修改自动锁定时间）</string>
  <string name="set_auto_back_after_start_default_on_start">打开默认后返回</string>
  <string name="set_auto_back_after_start_default_on_start_detail">启动时打开默认后是否自动返回桌面</string>
  <string name="set_auto_scan_address_on_start">自动开始扫描</string>
  <string name="set_auto_scan_address_on_start_detail">启动时自动开始扫描局域网所有可用设备地址</string>
  <string name="set_auto_show_nav_bar_on_connect">打开导航栏显示</string>
  <string name="set_auto_show_nav_bar_on_connect_detail">设置小窗和全屏模式默认是否显示导航栏</string>
  <string name="set_auto_change_to_full_on_connect">默认全屏启动</string>
  <string name="set_auto_change_to_full_on_connect_detail">开启后在连接成功后直接进入全屏状态</string>
  <string name="set_auto_small_to_mini_on_outside">小窗自动挂起</string>
  <string name="set_auto_small_to_mini_on_outside_detail">触摸小窗以外位置时自动最小化，默认为不变</string>
  <string name="set_auto_full_to_mini_on_exit">全屏自动挂起</string>
  <string name="set_auto_full_to_mini_on_exit_detail">非手动操作退出全屏时，自动最小化，默认为自动切换为小窗</string>
  <string name="set_auto_mini_recover_on_timeout">挂起后自动恢复</string>
  <string name="set_auto_mini_recover_on_timeout_detail">在触发自动挂起后5秒内无操作自动恢复为原模式</string>
  <string name="set_auto_reconnect_on_close">自动重连</string>
  <string name="set_auto_reconnect_on_close_detail">当意外断开时，自动重新连接（因有线设备需要重新授权，所以无法自动重连）</string>
  <string name="set_auto_clear_default">清除默认打开设备</string>
  <string name="set_auto_clear_default_code">已清除</string>
  <string name="set_other_custom_key">自定义密钥(需重新授权)</string>
  <string name="set_other_clear_key">重新生成密钥(需重新授权)</string>
  <string name="set_other_clear_key_code">已刷新</string>
  <string name="set_other_locale">语言切换(中文/English)</string>
  <string name="set_other_locale_code">Ok, you may need to restart the APP</string>
  <string name="set_about_ip">查看本机IP</string>
  <string name="set_about_active">取消激活</string>
  <string name="set_about_website">项目主页</string>
  <string name="set_about_how_to_use">使用说明</string>
  <string name="set_about_privacy">隐私政策</string>
  <string name="set_about_version">版本: </string>

  <!-- 查看IP地址页面 -->
  <string name="ip_title">本机地址</string>
  <string name="ip_ipv4">IPv4(点击复制)</string>
  <string name="ip_ipv6">IPv6(点击复制)</string>
  <string name="ip_copy">已复制</string>

  <!-- 查看密钥页面 -->
  <string name="adb_key_pub">公钥(Base64编码)</string>
  <string name="adb_key_pri">私钥(Base64编码)</string>
  <string name="adb_key_button">保存</string>
  <string name="adb_key_button_code">已保存</string>

  <!-- 激活页面 -->
  <string name="active_url">前往捐赠地址</string>
  <string name="active_key">捐赠订单号: 35元及以上</string>
  <string name="active_button">激活</string>
  <string name="active_key_hint">
    * 捐赠后将于24小时内录入系统，请耐心等待 \n
    * 易控是买断制，不限制使用数量，但为了防止盗刷，单账号默认限制5台设备 \n
    * 为了保护您的隐私，易控使用了随机数标识一台设备，这意味着重装软件也会被视为新设备 \n
    * 如果您因为设备数量超出而无法激活或其他任何问题，请联系我们 \n
    * 联系地址：mingzhixian@outlook.com
  </string>
  <string name="active_button_error">输入错误或系统仍未录入或超出5台设备</string>
  <string name="active_button_success">激活成功，请查看使用说明后使用</string>
  <string name="active_deactivate_error">取消激活错误，原因未知</string>
  <string name="active_deactivate_success">已取消激活</string>

  <!-- 设备添加模块 -->
  <string name="device_detail_name">设备名称</string>
  <string name="device_detail_name_hint">不可为空</string>
  <string name="device_detail_address">地址:端口号</string>
  <string name="device_detail_address_hint">支持IPv4/v6地址、域名</string>
  <string name="device_detail_option">参数设置</string>
  <string name="device_detail_auto">自动化设置</string>
  <string name="device_detail_button">确认</string>

  <!-- 设备设置模块 -->
  <string name="set_device_title">干什么◔ ‸◔?</string>
  <string name="set_device_button_recover">恢复分辨率</string>
  <string name="set_device_button_recover_success">恢复成功</string>
  <string name="set_device_button_recover_error">连接失败，请检查ADB和网络</string>
  <string name="set_device_button_set_default">启动时打开</string>
  <string name="set_device_button_get_uuid">获取ID</string>
  <string name="set_device_button_get_uuid_success">已复制</string>
  <string name="set_device_button_start_wireless">打开无线</string>
  <string name="set_device_button_start_wireless_success">成功</string>
  <string name="set_device_button_change">修改</string>
  <string name="set_device_button_delete">删除</string>

  <!-- 加载中模块 -->
  <string name="loading_text">加加加加载中</string>

  <!-- 错误提示 -->
  <string name="error_no_browser">没有默认浏览器</string>
  <string name="error_address_error">地址格式错误</string>
  <string name="error_refused_back">全屏状态会拦截返回</string>
  <string name="error_timeout">超时</string>
  <string name="error_connect_server">连接被控端失败</string>
  <string name="error_stream_closed">连接断开</string>

  <!-- 设备参数设置及注释说明 -->
  <string name="option_is_audio">音频</string>
  <string name="option_is_audio_detail">被控端需要安卓12之上</string>
  <string name="option_max_size">最大大小</string>
  <string name="option_max_size_detail">设置画面的最大大小</string>
  <string name="option_max_fps">最大帧率</string>
  <string name="option_max_fps_detail">最大帧率限制，值越低画面越卡顿</string>
  <string name="option_max_video_bit">最大码率</string>
  <string name="option_max_video_bit_detail">码率越大视频损失越小体积越大，建议设置为4，过高会导致延迟增加</string>
  <string name="option_use_h265">优先H265</string>
  <string name="option_use_h265_detail">优先使用H265，视频体积小延迟低，若画面异常可尝试关闭</string>
  <string name="option_set_resolution">修改分辨率</string>
  <string name="option_set_resolution_detail">开启后会自动修改被控端分辨率，可能会无法自动恢复(可手动恢复)，慎重考虑</string>

</resources>