<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/background"
  android:orientation="vertical"
  tools:context=".ActiveActivity">

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:paddingStart="15dp"
      android:paddingTop="30dp"
      android:paddingEnd="15dp"
      android:paddingBottom="60dp">

      <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@drawable/background_cron"
        android:orientation="vertical"
        android:padding="15dp" />

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_cron"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/active_key"
          android:textColor="@color/onCardBackground"
          android:textSize="@dimen/smallFont" />

        <EditText
          android:id="@+id/key"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:digits="0123456789"
          android:textColor="@color/onCardBackground"
          android:textColorHint="@color/onCardBackgroundSecond"
          android:textSize="@dimen/smallFont" />
      </LinearLayout>

      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/active_key_hint"
        android:textColor="@color/alert"
        android:textSize="@dimen/smallFont" />

      <Button
        android:id="@+id/active"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_cron"
        android:backgroundTint="@color/button"
        android:gravity="center"
        android:text="@string/active_button"
        android:textColor="@color/onButton"
        android:textSize="@dimen/smallFont" />
    </LinearLayout>
  </ScrollView>
</LinearLayout>